// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should add isPrimary styles if is primary 1`] = `
<h1
  className="root"
  id="heading"
>
  <a
    className="heading heading1 isPrimary"
    href="/heading"
  >
    Heading
  </a>
  <div
    className="toolbar"
  />
</h1>
`;

exports[`renderer should render H1 tag if depth of 0 1`] = `
<h1
  className="root"
  id="heading"
>
  <a
    className="heading heading1"
    href="/heading"
  >
    Heading
  </a>
  <div
    className="toolbar"
  />
</h1>
`;

exports[`renderer should render H4 tag for depth of 3 1`] = `
<h4
  className="root"
  id="heading"
>
  <a
    className="heading heading4"
    href="/heading"
  >
    Heading
  </a>
  <div
    className="toolbar"
  />
</h4>
`;

exports[`renderer should render H6 tag if depth is over 5 1`] = `
<h6
  className="root"
  id="heading"
>
  <a
    className="heading heading6"
    href="/heading"
  >
    Heading
  </a>
  <div
    className="toolbar"
  />
</h6>
`;

exports[`renderer should render heading with deprecated styles 1`] = `
<h4
  className="root"
  id="heading"
>
  <a
    className="heading heading4 isDeprecated"
    href="/heading"
  >
    Heading
  </a>
  <div
    className="toolbar"
  />
</h4>
`;

exports[`should pass props to slots 1`] = `
<SectionHeadingRenderer
  classes={
    Object {
      ".rsg--heading-1:hover, .rsg--heading-1:active": "rsg--heading-1:hover, .rsg--heading-1:active",
      "heading": "rsg--heading-1",
      "heading1": "rsg--heading1-3",
      "heading2": "rsg--heading2-4",
      "heading3": "rsg--heading3-5",
      "heading4": "rsg--heading4-6",
      "heading5": "rsg--heading5-7",
      "heading6": "rsg--heading6-8",
      "isDeprecated": "rsg--isDeprecated-9",
      "isPrimary": "rsg--isPrimary-2",
      "root": "rsg--root-0",
      "toolbar": "rsg--toolbar-10",
    }
  }
  depth={1}
  href="/heading"
  id="heading"
  slotName="slot"
  slotProps={
    Object {
      "bar": "baz",
      "foo": 1,
    }
  }
>
  Heading
</SectionHeadingRenderer>
`;
